--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./",
+    "bandr": "npm run parser && npm run start",
+    "start": "node ./ test.scr",
     "parser": "jison -m commonjs morpheus.y morpheus.l",
     "parser-d": "jison -t -m commonjs morpheus.y morpheus.l"
   },
